# zelph

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  .neocmake.toml  CMakeLists.txt  CONTRIBUTING.md  README.md  test.sh  test.zph  update-boost-submodules.sh  zelph-io
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
.zed/: debug.json  tasks.json
dev_scripts/: P361-is part of-shortened.json  Q23444-white-shortened.json  Q23445-black.json  analyze-arithmetic-parallel-ab.sh  analyze-arithmetic-perf-2.sh  analyze-arithmetic-perf.sh  analyze-arithmetic-seminaive.sh  analyze-wikidata-smoke.sh  download-wikidata.sh  measure-zelph-perf  naf-test-a.zph  naf-test-b.zph  naf-test-c.zph  numbers.zph  run_symbolic_md_examples.sh  symbolic_md_01_diff_intro.zph  symbolic_md_02_simplify.zph  symbolic_md_03_folding.zph  symbolic_md_04_diff.zph  symbolic_md_05_eml_eq5.zph  symbolic_md_06_eml_compile.zph  test_hf_cache_revalidation.sh  test_hf_transfer_diagnostics.sh  test_nn.zph  test_sharding.sh  test_sharding1.zph  test_sparql.sh  test_sparql.zph  test_sparql_2.zph  time-consuming-arithmetic-test.zph  wikidata-disjointness-violations.zph  wikidata-missing-superclass.zph  wikidata-split-order.zph
dev_scripts/paper/: eml_dag_stats.py  s0_environment.zph  s1_eq5_derivation.zph  s2_roundtrips.zph  s3_macro_chain.zph  s4_sharing.zph  s5_nand.zph  s6_knowledge_folding.zph  s7_figure1.zph
mkdocs/: get-playground.sh  mkdocs.yml  replace-invalid-mkdocs-links.py  replace_invalid_mkdocs_links.raku
mkdocs/docs/: arithmetic.md  binaries.md  disjointness-violations.md  grant-report.md  import-export.md  index.md  janet.md  logic.md  mereology-violations.md  neural.md  playground.md  presentation.md  qualifiers.md  queries.md  quickstart.md  sharding.md  sparql.md  symbolic.md  tree-explanation.md  wikidata.md
mkdocs/docs/stylesheets/: extra.css
sample_scripts/: P279-is a-shortened.json  Q23444-white.json  Q23445-black-shortened.json  arithmetic.zph  binary-arithmetic.zph  download-wikidata.sh  english.zph  export_taxonomy_all.zph  german.zph  import_csv.zph  import_taxonomy.zph  lua_lib_sample.lua  measure-zelph-perf  nn-wikidata-demo.zph  notes.md  numbers.zph  prime.zph  prune-wikidata.zph  simple.zph  sparql.zph  taxonomy.json  test-zelph.go  test.zph  test2.zph  test_sharding2.zph  wikidata-disjointness-violations-top-1-length1_3.zph  wikidata-disjointness-violations-top-4-length1_2.zph  wikidata-disjointness-violations-top-4.zph  wikidata-disjointness-violations-var-length1_3.zph  wikidata-disjointness-violations.zph  wikidata-only-deductions.zph  wikidata-prune.zph  wikidata-split-order.zph  wikidata-var.zph  wikidata.zph
sample_scripts/deprecated/: chess.zph
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  adjacency_set.hpp  answer.cpp  answer.hpp  command_executor.cpp  command_executor.hpp  contradiction_error.hpp  data_manager.cpp  data_manager.hpp  fact_structure.hpp  fact_structure_types.hpp  interactive.cpp  interactive.hpp  markdown.cpp  markdown.hpp  mermaid.cpp  mermaid.hpp  network.hpp  network_types.hpp  node_to_string.cpp  node_to_string.hpp  node_view.hpp  output.cpp  output.hpp  platform_utils.cpp  platform_utils.hpp  read_async.cpp  read_async.hpp  reasoning.cpp  reasoning.hpp  reasoning_deduce.cpp  reasoning_evaluate.cpp  reasoning_profiler.hpp  repl_state.hpp  script_engine.cpp  script_engine.hpp  start-cppcheck.bat  stopwatch.cpp  stopwatch.hpp  string_utils.cpp  (+20 more)
src/lib/chrono/: stopwatch.cpp  stopwatch.hpp
src/lib/concurrency/: thread_pool.hpp
src/lib/io/: data_manager.cpp  data_manager.hpp  markdown.cpp  markdown.hpp  mermaid.cpp  mermaid.hpp  output.cpp  output.hpp  read_async.cpp  read_async.hpp  zelph.capnp
src/lib/network/: adjacency_set.hpp  answer.cpp  answer.hpp  fact_structure.hpp  hf_cache.hpp  hf_transfer.hpp  manifest_loader.hpp  network.hpp  network_types.hpp  neural.cpp  neural.hpp  reasoning.cpp  reasoning.hpp  reasoning_deduce.cpp  reasoning_evaluate.cpp  reasoning_neural.cpp  reasoning_profiler.hpp  reasoning_pruning.cpp  reasoning_seminaive.cpp  unification.cpp  unification.hpp  zelph.cpp  zelph.hpp  zelph_impl.hpp  zelph_maintenance.cpp  zelph_names.cpp  zelph_version.hpp.in
src/lib/platform/: platform_utils.cpp  platform_utils.hpp
src/lib/string/: node_to_string.cpp  node_to_string.hpp  string_utils.cpp  string_utils.hpp
src/lib/wikidata/: import_diagnostics.hpp  markdown.cpp  markdown.hpp  wikidata.cpp  wikidata.hpp  wikidata_text_compressor.hpp  wikidata_token_encoder.hpp
src/test/: CMakeLists.txt  test_clusters.cpp  test_helpers.hpp  test_hf_cache.cpp  test_interactive.cpp  test_nand_arithmetic.cpp  test_neural.cpp  test_node_display.cpp  test_numbers.cpp  test_primes.cpp  test_reasoning.cpp  test_seminaive.cpp  test_sparql.cpp  test_stratified.cpp  test_symbolic.cpp  test_wikidata_qualifiers.cpp
src/wasm/: CMakeLists.txt  node_binary_arithmetic_test.mjs  node_smoke_test.mjs  playground.cpp
src/wasm/web/: demos.js  index.html  playground.js  zelph-worker.js
stdlib/: arithmetic.zph  binary-arithmetic.zph  binary-nand-arithmetic.zph  common-arithmetic.zph  diff.zph  eml.zph  nn.zph  primes-naf.zph  primes.zph  sparql.zph  symbolic-core.zph
stdlib/examples/: english.zph
stdlib/examples/import-export/: data.csv  export_taxonomy.zph  export_taxonomy_filtered.zph  taxonomy.zph
stdlib/examples/neural/: nn-wikidata-demo.zph
stdlib/examples/wikidata/: wikidata-only-deductions.zph
tools/: emit_zelph_hf_v2.py
